# D2ToolBox

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README_CN.md
.github/workflows/: build_examples.yml  upload_component.yml
components/d2_font/: CHANGELOG.md  CMakeLists.txt  README.md  d2_font.c  d2_font_fmt_txt.c  idf_component.yml
components/d2_font/include/: d2_font.h  d2_font_fmt_txt.h
examples/d2_font/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/d2_font/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_demo_ui.c  main.c  mmap_generate_fonts.h
tools/ci/: astyle-rules.yml  check_copyright_config.yaml  check_copyright_ignore.txt  check_executables.py
